more work on updating htmls

--- a/git/formuladb-env/frmdb-apps/apollo-medical-center/index.html
+++ b/git/formuladb-env/frmdb-apps/apollo-medical-center/index.html
@@ -37,7 +37,8 @@
             </div>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/apollo-medical-center/static/54e6d0474250af14f6da8c7dda79367f1c37dfe752506c4870277ad5974dc551be_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/apollo-medical-center/static/54e6d0474250af14f6da8c7dda79367f1c37dfe752506c4870277ad5974dc551be_1280.jpg&quot;);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2>Cards with Icons</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -85,7 +86,8 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-section-cards-icon>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
