--- a/git/formuladb-env/frmdb-apps/beauty-salon/index.html
+++ b/git/formuladb-env/frmdb-apps/beauty-salon/index.html
@@ -35,9 +35,7 @@
         </div>
         <div class="card-deck frmdb-card-h-50">
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
-                    <img src="/formuladb-env/frmdb-apps/beauty-salon/static/54e4d5464b51ad14f6da8c7dda79367f1c37dfe752506c4870277bd09e4cc158ba_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/beauty-salon/static/54e4d5464b51ad14f6da8c7dda79367f1c37dfe752506c4870277bd09e4cc158ba_640.jpg')"></frmdb-t-img>
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
@@ -51,9 +49,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
-                    <img src="/formuladb-env/frmdb-apps/beauty-salon/static/55e1d3424355a814f6da8c7dda79367f1c37dfe752506c4870277bd09e49c65ab0_1280.jpg" alt="" style="object-position: center">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/beauty-salon/static/55e1d3424355a814f6da8c7dda79367f1c37dfe752506c4870277bd09e49c65ab0_1280.jpg')"></frmdb-t-img>
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p data-i18n="en">Integer sit amet nisi</p>
                 </div>
@@ -66,9 +62,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
-                    <img src="/formuladb-env/frmdb-apps/beauty-salon/static/54e3d24b4d53b108f5d08460962936771d3edce4524c704c7d2f7fdd964cc65d_640.jpg" alt="" style="width: 100%" class="w-100">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/beauty-salon/static/54e3d24b4d53b108f5d08460962936771d3edce4524c704c7d2f7fdd964cc65d_640.jpg')"></frmdb-t-img>
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p data-i18n="en">Curabitur suscipit, massa&nbsp;</p>
                 </div>
@@ -82,9 +76,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
-                    <img src="/formuladb-env/frmdb-apps/beauty-salon/static/55e7dc404e53af14f6da8c7dda79367f1c37dfe752506c4870277bd09e4cc25ebf_640.jpg" alt="" class="w-100">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/beauty-salon/static/55e7dc404e53af14f6da8c7dda79367f1c37dfe752506c4870277bd09e4cc25ebf_640.jpg')"></frmdb-t-img>
                 <div class="card-body text-center border border-2 border-primary m-3 frmdb-bg-dark-40 text-light" style="grid-area: 1 / 1 / 1 / 1; place-self: end center;">
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
@@ -99,7 +91,8 @@
             </frmdb-t-card-media-main>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/beauty-salon/static/54e6d245495bae14f6da8c7dda79367f1c37dfe752506c4870277bd5944ac05bbb_1280.jpg&quot;);">
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/beauty-salon/static/54e6d245495bae14f6da8c7dda79367f1c37dfe752506c4870277bd5944ac05bbb_1280.jpg&quot;);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container">
             <div class="row">
                 <div class="jumbotron col-md-5 min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around">
@@ -110,7 +103,8 @@
                 </div>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-media-section-main>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
@@ -124,7 +118,8 @@
             </div>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/beauty-salon/static/54e3d5404954ad14f6da8c7dda79367f1c37dfe752506c4870277bd5934fc35dbc_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/beauty-salon/static/54e3d5404954ad14f6da8c7dda79367f1c37dfe752506c4870277bd5934fc35dbc_1280.jpg&quot;);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 data-i18n="en">How to find us</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -150,7 +145,8 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-section-cards-icon>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
