--- a/git/formuladb-env/frmdb-apps/click-hostel/index.html
+++ b/git/formuladb-env/frmdb-apps/click-hostel/index.html
@@ -30,9 +30,7 @@
         </div>
         <div class="card-deck">
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/click-hostel/static/52e1d6444a54b108f5d08460962936771d3edce4524c704c7d2e7ad49644cc5e_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/click-hostel/static/52e1d6444a54b108f5d08460962936771d3edce4524c704c7d2e7ad49644cc5e_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">6 beds private dorm</h5>
                     <h6 data-i18n="en">6 SINGLE BEDS</h6>
@@ -49,9 +47,7 @@
                 <frmdb-t-card-note></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/click-hostel/static/57e8d6474950ab14f6da8c7dda79367f1c37dfe752506c4870277ad5974cc75fba_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/click-hostel/static/57e8d6474950ab14f6da8c7dda79367f1c37dfe752506c4870277ad5974cc75fba_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">private room</h5>
                     <h6 data-i18n="en">a small office</h6>
@@ -63,9 +59,7 @@
                 <frmdb-t-card-note></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/click-hostel/static/57e0d6424a55a514f6da8c7dda79367f1c37dfe752506c4870277ad5974cc75fba_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/click-hostel/static/57e0d6424a55a514f6da8c7dda79367f1c37dfe752506c4870277ad5974cc75fba_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">standard double room</h5>
                     <h6 data-i18n="en">1 LARGE DOUBLE BED</h6>
@@ -77,9 +71,7 @@
                 <frmdb-t-card-note></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/click-hostel/static/54e5d24b4e56aa14f6da8c7dda79367f1c37dfe752506c4870277ad5974fc450bf_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/click-hostel/static/54e5d24b4e56aa14f6da8c7dda79367f1c37dfe752506c4870277ad5974fc450bf_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">fun at the bar</h5>
                     <h6>Card 4 subtitle</h6>
@@ -99,9 +91,7 @@
         </div>
         <div class="card-deck">
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/click-hostel/static/52e1d2464e5aaa14f6da8c7dda79367f1c37dfe752506c4870277ad5974ec75bb1_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/click-hostel/static/52e1d2464e5aaa14f6da8c7dda79367f1c37dfe752506c4870277ad5974ec75bb1_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">tulip fields</h5>
                     <h6 data-i18n="en">Card 1 subtitle</h6>
@@ -113,9 +103,7 @@
                 <frmdb-t-card-note></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/click-hostel/static/54e1d7444c50a914f6da8c7dda79367f1c37dfe752506c4870277ad5974ec55cba_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/click-hostel/static/54e1d7444c50a914f6da8c7dda79367f1c37dfe752506c4870277ad5974ec55cba_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">Top museums</h5>
                     <h6 data-i18n="en">buy your ticket online</h6>
@@ -133,9 +121,7 @@
                 <frmdb-t-card-note></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/click-hostel/static/54e7dc4a4e5bad14f6da8c7dda79367f1c37dfe752506c4870277ad5974ec459bf_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/click-hostel/static/54e7dc4a4e5bad14f6da8c7dda79367f1c37dfe752506c4870277ad5974ec459bf_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">rent a bike</h5>
                     <h6 data-i18n="en" contenteditable="true" spellcheckker="false">rent a bike</h6>
@@ -147,9 +133,7 @@
                 <frmdb-t-card-note></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/click-hostel/static/50e9d5464c5bb108f5d08460962936771d3edce4524c704c7d2d7ad49f4ecd59_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/click-hostel/static/50e9d5464c5bb108f5d08460962936771d3edce4524c704c7d2d7ad49f4ecd59_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">top bars &amp; restaurants</h5>
                     <h6 data-i18n="en">what we recommend</h6>
@@ -162,7 +146,8 @@
             </frmdb-t-card-media-main>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/click-hostel/static/54e2d3424853ae14f6da8c7dda79367f1c37dfe752506c4870277ad5974cc65fb8_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/click-hostel/static/54e2d3424853ae14f6da8c7dda79367f1c37dfe752506c4870277ad5974cc65fb8_1280.jpg&quot;);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 data-i18n="en">hostel with benefits</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -210,7 +195,8 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-section-cards-icon>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
