--- a/git/formuladb-env/frmdb-apps/dental-health/index.html
+++ b/git/formuladb-env/frmdb-apps/dental-health/index.html
@@ -26,9 +26,7 @@
         </div>
         <div class="card-deck">
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/dental-health/static/54e0d44a4e50ac14f6da8c7dda79367f1c37dfe752506c4870277bd09648c651b0_640.jpg" alt="" style="height: 152.319px;">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/dental-health/static/54e0d44a4e50ac14f6da8c7dda79367f1c37dfe752506c4870277bd09648c651b0_640.jpg')"></frmdb-t-img>
                 <h5 data-i18n="en" spellcheckker="false">MEET THE EXPERTS</h5>
                 <div class="card-body">
                     <h5 data-i18n="en"></h5>
@@ -60,9 +58,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/dental-health/static/53e2d4464f53b108f5d08460962936771d3edce4524c704c7d2f7fdc964acd58_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/dental-health/static/53e2d4464f53b108f5d08460962936771d3edce4524c704c7d2f7fdc964acd58_640.jpg')"></frmdb-t-img>
                 <h5 data-i18n="en" class="text-center">family card</h5>
                 <div class="card-body">
                     <p data-i18n="en">Curabitur suscipit, massa eu maximus&nbsp;</p>
@@ -77,9 +73,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/dental-health/static/52e7d7404d51ab14f6da8c7dda79367f1c37dfe752506c4870277bd09f4ccc5eb1_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/dental-health/static/52e7d7404d51ab14f6da8c7dda79367f1c37dfe752506c4870277bd09f4ccc5eb1_640.jpg')"></frmdb-t-img>
                 <h5 data-i18n="en" class="text-center
 ">advices for seniors</h5>
                 <div class="card-body">
@@ -100,9 +94,7 @@
         <div class="text-center mb-5"></div>
         <div class="card-deck">
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/dental-health/static/57e8d3474350ad14f6da8c7dda79367f1c37dfe752506c4870277bd1974fc05aba_640.jpg" alt="" style="height: 152.319px;">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/dental-health/static/57e8d3474350ad14f6da8c7dda79367f1c37dfe752506c4870277bd1974fc05aba_640.jpg')"></frmdb-t-img>
                 <h5 data-i18n="en">dental technology</h5>
                 <div class="card-body">
                     <h5 data-i18n="en"></h5>
@@ -134,9 +126,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/dental-health/static/54e3d64a4b54a414f6da8c7dda79367f1c37dfe752506c4870277bd1974fc35db0_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/dental-health/static/54e3d64a4b54a414f6da8c7dda79367f1c37dfe752506c4870277bd1974fc35db0_640.jpg')"></frmdb-t-img>
                 <h5 data-i18n="en" class="text-center">dental veneers care</h5>
                 <div class="card-body">
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
@@ -151,9 +141,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/dental-health/static/55e6d3404957b108f5d08460962936771d3edce4524c704c7d2f7ed4964ac459_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/dental-health/static/55e6d3404957b108f5d08460962936771d3edce4524c704c7d2f7ed4964ac459_640.jpg')"></frmdb-t-img>
                 <h5 data-i18n="en" class="text-center
 ">before getting braces</h5>
                 <div class="card-body">
@@ -170,7 +158,8 @@
             </frmdb-t-card-media-main>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/dental-health/static/54e5dd474854ac14f6da8c7dda79367f1c37dfe752506c4870277bd09f4cc059b8_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/dental-health/static/54e5dd474854ac14f6da8c7dda79367f1c37dfe752506c4870277bd09f4cc059b8_1280.jpg&quot;);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 data-i18n="en">What we offer</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -211,7 +200,8 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-section-cards-icon>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
