--- a/git/formuladb-env/frmdb-apps/design-therapy/index.html
+++ b/git/formuladb-env/frmdb-apps/design-therapy/index.html
@@ -95,7 +95,8 @@
             </div>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/design-therapy/static/54e1dd424354a414f6da8c7dda79367f1c37dfe752506c4870277bdd974fc751b0_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/design-therapy/static/54e1dd424354a414f6da8c7dda79367f1c37dfe752506c4870277bdd974fc751b0_1280.jpg&quot;);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 data-i18n="en">how it works</h2>
             <p data-i18n="en">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -133,7 +134,8 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-section-cards-icon>
     <div data-frmdb-fragment="_form.html"></div>
     <section class="container py-5 my-5">
         <div class="row">
