--- a/git/formuladb-env/frmdb-apps/health-guardians/index.html
+++ b/git/formuladb-env/frmdb-apps/health-guardians/index.html
@@ -29,9 +29,7 @@
         </div>
         <div class="card-deck">
             <frmdb-t-card-media-main>
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/health-guardians/static/52e6d2444e52ad14f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/health-guardians/static/52e6d2444e52ad14f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">dr. lee peng</h5>
                     <h6 data-i18n="en">general practitioner</h6>
@@ -47,9 +45,7 @@
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main>
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/health-guardians/static/57e1d14a4b56a514f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/health-guardians/static/57e1d14a4b56a514f6da8c7dda79367f1c37dfe752506c4870277bdd954bcd5bbd_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">dr. john perk</h5>
                     <h6 data-i18n="en">CARDIOLOGY SPECIALIST</h6>
@@ -63,9 +59,7 @@
                 </a>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main>
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/health-guardians/static/54e1d1424857a514f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/health-guardians/static/54e1d1424857a514f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">dr. Jose lopez</h5>
                     <h6 data-i18n="en">HEMATOLOGIST</h6>
@@ -78,9 +72,7 @@
                 <frmdb-t-card-action></frmdb-t-card-action>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main>
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/health-guardians/static/55e0d5464c5bae14f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.png" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/health-guardians/static/55e0d5464c5bae14f6da8c7dda79367f1c37dfe752506c4870277bdd954ac45cbe_640.png')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">dr. meghan raw</h5>
                     <h6 data-i18n="en">Diabetologist/ nutritionist</h6>
