--- a/git/formuladb-env/frmdb-apps/kids-playground/index.html
+++ b/git/formuladb-env/frmdb-apps/kids-playground/index.html
@@ -20,7 +20,8 @@
     <frmdb-t-aside class="container">
         <div data-frmdb-fragment="_form.html"></div>
     </frmdb-t-aside>
-    <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/5ee1d7474250b108f5d08460962936771d3edce4524c704c7d2e7ad4974ec15e_1280.jpg&quot;);">
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/5ee1d7474250b108f5d08460962936771d3edce4524c704c7d2e7ad4974ec15e_1280.jpg&quot;);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container">
             <div class="row">
                 <div class="jumbotron col-md-5 w-100 text-center bg-transparent" data-aos="slideInUp">
@@ -31,7 +32,8 @@
                 </div>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-media-section-main>
     <section class="container py-5">
         <div class="text-center mb-5">
             <h2 data-i18n="en">activities</h2>
@@ -39,9 +41,7 @@
         </div>
         <div class="card-deck">
             <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/kids-playground/static/57e0dc414350ad14f6da8c7dda79367f1c37dfe752506c4870277ad49e4ac25ab9_1280.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/kids-playground/static/57e0dc414350ad14f6da8c7dda79367f1c37dfe752506c4870277ad49e4ac25ab9_1280.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">cozy playground</h5>
                     <h6>Card 1 subtitle</h6>
@@ -57,9 +57,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/kids-playground/static/54e2d4464c52ad14f6da8c7dda79367f1c37dfe752506c4870277ad5924ac05bb1_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/kids-playground/static/54e2d4464c52ad14f6da8c7dda79367f1c37dfe752506c4870277ad5924ac05bb1_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">cool games</h5>
                     <h6>Card 2 subtitle</h6>
@@ -75,9 +73,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/kids-playground/static/57e4d3444850a414f6da8c7dda79367f1c37dfe752506c4870277ad49e45c750bb_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/kids-playground/static/57e4d3444850a414f6da8c7dda79367f1c37dfe752506c4870277ad49e45c750bb_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">laser tag</h5>
                     <h6>Card 3 subtitle</h6>
@@ -93,9 +89,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/kids-playground/static/52e8d5474f5bb108f5d08460962936771d3edce4524c704c7d2e7ad49745c558_1280.jpg" alt="" width="250">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/kids-playground/static/52e8d5474f5bb108f5d08460962936771d3edce4524c704c7d2e7ad49745c558_1280.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">escalade</h5>
                     <h6>Card 4 subtitle</h6>
@@ -145,7 +139,8 @@
             </div>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/54e2dc404251a514f6da8c7dda79367f1c37dfe752506c4870277ad49e45c15ebe_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/54e2dc404251a514f6da8c7dda79367f1c37dfe752506c4870277ad49e45c15ebe_1280.jpg&quot;);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 data-i18n="en">we like to party</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -193,7 +188,8 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-section-cards-icon>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
