--- a/git/formuladb-env/frmdb-apps/law-firm/index.html
+++ b/git/formuladb-env/frmdb-apps/law-firm/index.html
@@ -35,7 +35,8 @@
         </div>
     </section>
     <div class="col"></div>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/law-firm/static/57e1d14a4354ae14f6da8c7dda79367f1c37dfe752506c4870277ad49f49cc5fba_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/law-firm/static/57e1d14a4354ae14f6da8c7dda79367f1c37dfe752506c4870277ad49f49cc5fba_1280.jpg&quot;);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 data-i18n="en">practice areas</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -83,7 +84,8 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-section-cards-icon>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
