--- a/git/formuladb-env/frmdb-apps/summer-villa/index.html
+++ b/git/formuladb-env/frmdb-apps/summer-villa/index.html
@@ -28,9 +28,7 @@
         </div>
         <div class="card-deck">
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/summer-villa/static/52e3d2404a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/52e3d2404a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">relaxing at the pool</h5>
                     <p>Quisque ornare, quam a blandit malesuada</p>
@@ -41,9 +39,7 @@
                 <frmdb-t-card-note></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/summer-villa/static/52e4d4454f53a914f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/52e4d4454f53a914f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">which room do you prefer?</h5>
                     <p data-i18n="en">Integer sit amet nisi viverra, pharetra</p>
@@ -54,9 +50,7 @@
                 <frmdb-t-card-note></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/summer-villa/static/52e4dc4a4f50b108f5d08460962936771d3edce4524c704c7d2f72d49f49c350_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/52e4dc4a4f50b108f5d08460962936771d3edce4524c704c7d2f72d49f49c350_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">fresh menu daily</h5>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
@@ -66,9 +60,7 @@
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/summer-villa/static/5fe0d0464f55b108f5d08460962936771d3edce4524c704c7d2f72d49f48c451_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/5fe0d0464f55b108f5d08460962936771d3edce4524c704c7d2f72d49f48c451_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">enjoy the sea view terrace</h5>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
@@ -97,7 +89,8 @@
             <img class="img-fluid" src="/formuladb-env/frmdb-apps/summer-villa/static/55e8d5474b50a514f6da8c7dda79367f1c37dfe752506c4870277bdd964cc45ab1_640.jpg" alt="...">
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/summer-villa/static/55e3dd4a4a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964dc35fba_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/summer-villa/static/55e3dd4a4a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964dc35fba_1280.jpg&quot;);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2>Cards with Icons</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -145,7 +138,8 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-section-cards-icon>
     <section class="container py-5">
         <div class="text-center mb-5">
             <h2 data-i18n="en">discover the beauty of the city</h2>
@@ -153,9 +147,7 @@
         </div>
         <div class="card-deck">
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/summer-villa/static/55e3d3474c57b108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/55e3d3474c57b108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">wine tour with lunch</h5>
                     <p>Quisque ornare, quam a blandit malesuada</p>
@@ -165,9 +157,7 @@
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/summer-villa/static/55e8d3474e54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c45bbf_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/55e8d3474e54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c45bbf_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">flavours day trip in the city&nbsp;</h5>
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
@@ -177,9 +167,7 @@
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/summer-villa/static/52e1dd464f54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd964cc55fba_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/52e1dd464f54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd964cc55fba_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">botanical gardens tour&nbsp;</h5>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
@@ -189,9 +177,7 @@
                 </frmdb-t-card-action>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/summer-villa/static/52e5d5464d57ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c651b8_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/summer-villa/static/52e5d5464d57ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c651b8_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">antique market</h5>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
