--- a/git/formuladb-env/frmdb-apps/vegetarian-restaurant/index.html
+++ b/git/formuladb-env/frmdb-apps/vegetarian-restaurant/index.html
@@ -53,7 +53,8 @@
             </div>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/vegetarian-restaurant/static/54e5dd464d5bad14f6da8c7dda79367f1c37dfe752506c4870277bd7964ac359ba_1280.jpg&quot;); background-color: rgb(255, 255, 255);">
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/vegetarian-restaurant/static/54e5dd464d5bad14f6da8c7dda79367f1c37dfe752506c4870277bd7964ac359ba_1280.jpg&quot;); background-color: rgb(255, 255, 255);">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container">
             <div class="row">
                 <div class="jumbotron col-md-5 w-100 text-center bg-transparent">
@@ -64,7 +65,8 @@
                 </div>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-media-section-main>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
