--- a/git/formuladb-env/frmdb-apps/apollo-medical-center/_head.html
+++ b/git/formuladb-env/frmdb-apps/apollo-medical-center/_head.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="./favicon.svg">
 <title>FormulaDB Themes</title>
-<link rel="stylesheet" id="frmdb-theme-css" href="/formuladb-env/css/litera-593196-a991d4.css">
+<link rel="stylesheet" href="./formuladb-look.css">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
 
 
