--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
@@ -43,9 +43,7 @@
         </div>
         <div class="card-deck frmdb-cards-3">
             <frmdb-t-card-media-main data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
-                <frmdb-t-img class="overflow-hidden frmdb-bg-dark-20">
-                    <img src="/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-1.png" alt="" data-frmdb-value="$FRMDB.$Page[].screenshot" class="opacity-0p3">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden frmdb-bg-dark-20" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-1.png')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-frmdb-value="$FRMDB.$Page[].title">Post 1</h5>
                     <p data-frmdb-value="$FRMDB.$Page[].description">desc</p>
@@ -60,9 +58,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
-                <frmdb-t-img class="overflow-hidden frmdb-bg-dark-20">
-                    <img src="/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-2.png" alt="" data-frmdb-value="$FRMDB.$Page[].screenshot" class="opacity-0p3">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden frmdb-bg-dark-20" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-2.png')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-frmdb-value="$FRMDB.$Page[].title">Post 2</h5>
                     <p data-frmdb-value="$FRMDB.$Page[].description">desc</p>
@@ -77,9 +73,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
-                <frmdb-t-img class="overflow-hidden frmdb-bg-dark-20">
-                    <img src="/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-3.png" alt="" data-frmdb-value="$FRMDB.$Page[].screenshot" class="opacity-0p3">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden frmdb-bg-dark-20" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-3.png')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-frmdb-value="$FRMDB.$Page[].title">Blog Post 3</h5>
                     <p data-frmdb-value="$FRMDB.$Page[].description"></p>
@@ -95,7 +89,8 @@
             </frmdb-t-card-media-main>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg-right.jpg')">
+    <frmdb-t-media-section-main style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg-right.jpg')">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container">
             <div class="row">
                 <div class="jumbotron col-md-5">
@@ -106,7 +101,8 @@
                 </div>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-media-section-main>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
@@ -122,7 +118,8 @@
             </div>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg3.jpg')">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg3.jpg')">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 id="themeiconcards">Cards with Icons</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -170,7 +167,8 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-section-cards-icon>
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
