--- a/git/formuladb-env/frmdb-apps/photography-services/index.html
+++ b/git/formuladb-env/frmdb-apps/photography-services/index.html
@@ -26,9 +26,7 @@
         </div>
         <div class="card-deck">
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
-                    <img src="/formuladb-env/frmdb-apps/photography-services/static/50e9d542485ab108f5d08460962936771d3edce4524c704c7d2f7ad19249c55e_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/photography-services/static/50e9d542485ab108f5d08460962936771d3edce4524c704c7d2f7ad19249c55e_640.jpg')"></frmdb-t-img>
                 <div class="card-body text-center">
                     <h5 data-i18n="en">&nbsp;Food photography</h5>
                     <h6>Card 1 subtitle</h6>
@@ -39,9 +37,7 @@
                 <frmdb-t-card-note class="text-center text-info font-weight-bold"></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="position: relative; left: 0px; display: grid;">
-                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
-                    <img src="/formuladb-env/frmdb-apps/photography-services/static/54e3d3454e51a414f6da8c7dda79367f1c37dfe752506c4870277bd59248c059b9_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/photography-services/static/54e3d3454e51a414f6da8c7dda79367f1c37dfe752506c4870277bd59248c059b9_640.jpg')"></frmdb-t-img>
                 <div class="card-body text-center">
                     <h5 data-i18n="en">editorial
                         <div data-i18n="en"></div>
@@ -56,9 +52,7 @@
                 <frmdb-t-card-note class="text-center text-info font-weight-bold"></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
-                    <img src="/formuladb-env/frmdb-apps/photography-services/static/50e7d2434b4fad0bffd8992cc6293e76143ddfe44e507441752e7ed1914acc_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/photography-services/static/50e7d2434b4fad0bffd8992cc6293e76143ddfe44e507441752e7ed1914acc_640.jpg')"></frmdb-t-img>
                 <div class="card-body text-center">
                     <h5 data-i18n="en">Sports photography</h5>
                     <h6>Card 3 subtitle</h6>
@@ -71,9 +65,7 @@
                 <frmdb-t-card-note class="text-center text-info font-weight-bold"></frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="border-0" style="display: grid;">
-                <frmdb-t-img class="overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
-                    <img src="/formuladb-env/frmdb-apps/photography-services/static/51e2d0474950b108f5d08460962936771d3edce4524c704c7d2f7ad1924bc759_640.jpg" alt="">
-                </frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/photography-services/static/51e2d0474950b108f5d08460962936771d3edce4524c704c7d2f7ad1924bc759_640.jpg')"></frmdb-t-img>
                 <div class="card-body text-center">
                     <h5 data-i18n="en">Events photography</h5>
                     <h6>Card 4 subtitle</h6>
@@ -86,7 +78,8 @@
             </frmdb-t-card-media-main>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax " style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/photography-services/static/57e8d0434e54a514f6da8c7dda79367f1c37dfe752506c4870277bd5924ecc5bb1_1280.jpg&quot;); opacity: 1;">
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/photography-services/static/57e8d0434e54a514f6da8c7dda79367f1c37dfe752506c4870277bd5924ecc5bb1_1280.jpg&quot;); opacity: 1;">
+        <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container">
             <div class="row">
                 <div class="jumbotron col-md-5 w-100 text-center bg-transparent" style="font-weight: 500;">
@@ -97,7 +90,8 @@
                 </div>
             </div>
         </div>
-    </section>
+        <frmdb-t-section-divider></frmdb-t-section-divider>
+    </frmdb-t-media-section-main>
     <h2 data-i18n="en">Workshops</h2>
     <p data-i18n="en">Section lead paragraph, some text about the content described in this section.</p>
     <section class="container py-5 my-5 ">
