--- a/git/formuladb-env/frmdb-apps/summer-villa/_head.html
+++ b/git/formuladb-env/frmdb-apps/summer-villa/_head.html
@@ -11,7 +11,7 @@
 <link rel="icon" href="./favicon.svg">
 <title>FormulaDB Themes</title>
 
-<link rel="stylesheet" id="frmdb-theme-css" href="/formuladb-env/css/lux-cb8670-363636.css">
+<link rel="stylesheet" href="./formuladb-look.css">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
 
 
