--- a/git/formuladb-env/frmdb-apps/wellness-services/_head.html
+++ b/git/formuladb-env/frmdb-apps/wellness-services/_head.html
@@ -11,6 +11,6 @@
 <link rel="icon" href="./favicon.svg">
 <title>FormulaDB Themes</title>
 
-<link rel="stylesheet" id="frmdb-theme-css" href="/formuladb-env/css/lux-ffc208-353b41.css">
+<link rel="stylesheet" href="./formuladb-look.css">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
 </head>
